Adding OAuth security to the project